My first commit

--- a/index.html
+++ b/index.html
@@ -152,6 +152,19 @@
                 </div>
             </div>
             <!-- COPY TILL HERE -->
+            <div class="col-md-4">
+                <div class="m-card mcardStyle">
+                    <div class="name">Himandri Sharma</div>
+                    <div class="msg">I'm here with a PR.</div>
+                    <div class="github container-fluid">
+                        <div class="row">
+                            <i class="fab fa-github"></i>
+                            <a href="https://github.com/">/HimandriSharma</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- COPY TILL HERE -->
 
 
 
